# AI-Bias-dataset

./: .gitignore  DEVELOPMENT_PLAN.md  README.md  create_zip.sh  package-lock.json  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/ai_bias_dataset.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/app/api/: endpoints.py
backend/app/core/: config.py
backend/app/models/: dataset_schema.py
backend/app/schema_inference/: __init__.py  config.py  enums.py  exceptions.py  infer.py  utils.py
backend/app/services/: bias_detector.py  correlation_service.py  detect_problematic_columns.py  evaluate_class_balance.py  leak_detection.py  outlier_analysis.py  preprocessor.py  report_generator.py  shap_analysis.py
backend/app/utils/: file_utils.py
development/: DEVELOPMENT_PLAN.md
development/data/: BACKEND_RESEARCH_RESOURCES.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/pages/: AnalysisPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts
test/: test_infer_schema.py
test/data/test_csvs/: manifest.csv  test_01.csv  test_02.csv  test_03.csv  test_04.csv  test_05.csv  test_06.csv  test_07.csv  test_09.csv  test_10.csv  test_11.csv  test_12.csv  test_13.csv  test_14.csv  test_15.csv  test_16.csv  test_17.csv  test_18.csv  test_19.csv  test_20.csv  test_21.csv  test_22.csv  test_23.csv  test_24.csv  test_25.csv
test/datasets/: problematic_columns.csv  sample_dataset.csv
