[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-bias-dataset"
version = "0.1.0"
description = "Detección automática de sesgos en datos"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Victor Pla Sanchis", email = "vplasanchis@gmail.com" }
]

# Dependencias obligatorias (array PEP 621)
dependencies = [
  "pandas>=2.0",
  "python-dateutil>=2.8",
  "dateparser>=1.1"
]

# URLs de interés
[project.urls]
Homepage   = "https://victorplasanchis.github.io/portfolio"
Repository = "https://github.com/VictorPlaSanchis/AI-Bias-dataset"

# Dependencias de desarrollo
[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "flake8>=6.0",
  "mypy>=1.0"
]

# Para que setuptools encuentre tu paquete en backend/app
[tool.setuptools.packages.find]
where = ["backend/app"]
include = ["schema_inference", "schema_inference.*"]

[tool.mypy]
python_version = 3.9
strict = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
